--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,5 @@
 PORT=8080
 PG_CONNECTION_STRING=connection_string
+PG_METADATA_CONNECTION_STRING=connection_string
+PG_STAGING_CONNECTION_STRING=connection_string
+PG_OLAP_CONNECTION_STRING=connection_string
